--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -331,11 +331,9 @@ template {
 }
 
 #jugglejungle,
-#s0leil,
-#ci3l,
-#m0nC4nvaM3r,
-#m0nC4nvaC0lline {
+#s0leil {
   display: none;
+  border: 0.7px solid black;
   width: 100%;
   border-radius: 28px;
   margin-top: 5px;
@@ -368,9 +366,6 @@ html {
 }
 
 #CV {
-  border: 1px solid white;
-  background-color: rgba(183, 210, 214, 0.1);
-  border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 2.5%;
@@ -497,6 +492,8 @@ a.nav {
 
 #m0ncentrage {
   display: none;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 60px;
   margin-bottom: 60px;
 }
