db domain url + resume update

--- a/public/cv.pug
+++ b/public/cv.pug
@@ -86,6 +86,12 @@ append content
             h3.english Experiences
             h3.spanish Experiencia profesional
             .jobs
+              h3 Ingénieur étude et développement
+              .infojob.french Dévelopement sur IBM i (cl, sql, rpg, arcad, rdi), OCSI Paris 01, depuis janvier 2019
+              .infojob.english IBM i Developper (cl, sql, rpg, arcad, rdi), OCSI Paris 01, depuis janvier 2019
+              .infojob.spanish IBM i Developper (cl, sql, rpg, arcad, rdi), OCSI Paris 01, depuis janvier 2019
+            hr
+            .jobs
               h3 Webmaster
               .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez, d&eacute;cembre 2016
               .infojob.english Update of the Ecommerce website database (magento) www.snow-concept.com, Alpe d'Huez, December 2016
