brickbreaker playable height + update vitae

--- a/public/cv.pug
+++ b/public/cv.pug
@@ -42,7 +42,6 @@ append content
                 .infoJeu JQUERY
                 .infoJeu BootStrap
                 .infoJeu AngularJS
-                .infoJeu ReactJS
               h3 Back-End Development
               .informatiques#informatique
                 .infoJeu Apache
@@ -82,14 +81,20 @@ append content
               .infolast.english Incoming, service and commercial advice
               .infolast.spanish Recepción, servicio y asesoramiento comercial
           .competen#experiences
-            h3.french Exp&eacute;riences
-            h3.english Experiences
-            h3.spanish Experiencia profesional
+            h2.french Exp&eacute;riences
+            h2.english Experiences
+            h2.spanish Experiencia profesional
+            .jobs
+              h3 Développeur logiciel IBM i
+              .infojob.french Dévelopement sur IBM i (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
+              .infojob.english IBM i Developper (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
+              .infojob.spanish IBM i Developper (CL, SQL, RPG, arcad, Rdi), Pro a Pro  Montauban, depuis août 2019
+            hr
             .jobs
               h3 Ingénieur étude et développement
-              .infojob.french Dévelopement sur IBM i (cl, sql, rpg, arcad, rdi), OCSI Paris 01, depuis janvier 2019
-              .infojob.english IBM i Developper (cl, sql, rpg, arcad, rdi), OCSI Paris 01, depuis janvier 2019
-              .infojob.spanish IBM i Developper (cl, sql, rpg, arcad, rdi), OCSI Paris 01, depuis janvier 2019
+              .infojob.french Dévelopement sur IBM i (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
+              .infojob.english IBM i Developper (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
+              .infojob.spanish IBM i Developper (CL, SQL, RPG, arcad, Rdi), OCSI Paris 01, depuis janvier 2019
             hr
             .jobs
               h3 Webmaster
@@ -191,9 +196,9 @@ append content
               h3.spanish Trabajos de estudiante
               .infojob.spanish Asesor de ventas culturales Leclerc, camarero / camarero, trabajador de panadería, empleado multipropósito en Intermarché
           .competen#formation
-            h3.french Formation
-            h3.english Training
-            h3.spanish Formación
+            h2.french Formation
+            h2.english Training
+            h2.spanish Formación
             .jobs
               h3.french D&eacute;veloppeur JavaScript FullStack
               h3.english FullStack Javascript Developer
@@ -237,9 +242,9 @@ append content
               h3.english Scientific Baccalaureate Diploma: Specialty physics-chemistry
               h3.spanish Bachillerato Científico: Especialidad física-química        
           .complemen#complementaire
-            h3.french El&eacute;ments Compl&eacute;mentaires
-            h3.english Additional Info
-            h3.spanish Información Complementaria
+            h2.french El&eacute;ments Compl&eacute;mentaires
+            h2.english Additional Info
+            h2.spanish Información Complementaria
             p.jeu.french Permis : auto, moto.
               img.linkedin(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
             p.jeu.english Driving licences: car, motorcycle.
