--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -25,9 +25,32 @@ append content
     #metier
       h1 IBM RPG &amp; Javascript Developer
     .competen#competen
-      h2.french Comp&eacute;tences
-      h2.english Skills
-      h2.spanish  Competencias
+      form#scoreForm(action='/highscore' method='post')
+        label.nom(for='POST-name') name
+        br
+        input#postName(type='text' name='name')
+        br
+        //label.score(for='POST-score') score
+        //br
+        input#postScore(type='hidden' name='score' readonly='yes')
+        //br
+        br
+        input#subScore(type='submit' class="css3but" value='ok')
+      #highScore
+        h1.highscore High Score
+        table#mesData
+          thead
+            tr
+              th Nom
+              th Score
+          tbody
+            each player in results
+              tr
+                td=player.name
+                td=player.score
+      //h2.french Comp&eacute;tences
+      //h2.spanish  Competencias
+      h2#skills Skills
       .informatiquesCont.french.english.spanish#informatique
         h3 Front-End Development
         .informatiques
@@ -265,4 +288,3 @@ append content
       p.jeu.english Hobbies: electronics, decoration, design, renovation.
       p.jeu.spanish HOBBIES: electrónica, decoración, diseño, renovación.
       .web www.mikael.ml
-  
