--- a/public/cv.pug
+++ b/public/cv.pug
@@ -34,20 +34,21 @@ append content
             .informatiquesCont.french.english.spanish
               h3 Front-End Development
               .informatiques#informatique
-                .infoJeu HTML5
-                .infoJeu PUG
-                .infoJeu CSS3
-                .infoJeu SCSS
                 .infoJeu JavaScript
+                .infoJeu jade/PUG
+                .infoJeu HTML5
                 .infoJeu JQUERY
+                .infoJeu SCSS
                 .infoJeu BootStrap
                 .infoJeu AngularJS
               h3 Back-End Development
               .informatiques#informatique
-                .infoJeu Apache
                 .infoJeu NodeJS
                 .infoJeu ExpressJS
-                .infoJeu MongoDb
+                .infoJeu Ajax
+                .infoJeu DB2
+                .infoJeu mysql
+                .infoJeu mongoDB
                 .infoJeu WebSocket
               h3 Tools
               .informatiquesLast#informatique
