--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -187,8 +187,9 @@ h3 {
   position: absolute;
   border-radius: 10px;
   height: 25px;
+  width: 105px;
   margin: 5px;
-  background-color: yellowgreen;
+  background-color: black;
 }
 
 .experiencesT {
@@ -256,6 +257,7 @@ p.flags {
   display: none;
   position: absolute;
   border-radius: 10px;
+  width: 105px;
   height: 35px;
   margin: 5px;
 }
@@ -281,6 +283,7 @@ p.flags {
   margin: 1%;
   text-align: center;
   display: none;
+  height: 400px;
 }
 
 .competen {
@@ -549,15 +552,18 @@ p.flags {
 #scoreForm {
   width: 80%;
   display: none;
+  vertical-align: middle;
   margin-left: 10%;
   margin-right: 10%;
 }
 
-#highScore {
-  text-align: center;
+#score {
   display: none;
-  margin-left: 30%;
-  margin-right: 30%;
+}
+
+#mesData {
+  margin: auto;
+  text-align: left;
 }
 
 /*# sourceMappingURL=cv.css.map */
