--- a/public/cv.pug
+++ b/public/cv.pug
@@ -201,6 +201,20 @@ append content
             h2.english Training
             h2.spanish Formación
             .jobs
+              h3.french P&eacute;pinière IBM
+              h3.english P&eacute;pinière IBM
+              h3.spanish P&eacute;pinière IBM
+              .infojob.french Développement RPG et CL
+              .infojob.english Développement RPG et CL
+              .infojob.spanish Développement RPG et CL
+              .infojob.french SQL for IBM db2
+              .infojob.english SQL for IBM db2
+              .infojob.spanish SQL for IBM db2
+              .infojob.french Webservices for IBM i series
+              .infojob.english Webservices for IBM i series
+              .infojob.spanish Webservices for IBM i series
+              hr
+            .jobs
               h3.french D&eacute;veloppeur JavaScript FullStack
               h3.english FullStack Javascript Developer
               h3.spanish Desarollador Javascript de pila completa
@@ -239,9 +253,12 @@ append content
               .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
               hr
             .jobs
-              h3.french Baccalaur&eacute;at Scientifique: Sp&eacute;cialit&eacute; physique-chimie
-              h3.english Scientific Baccalaureate Diploma: Specialty physics-chemistry
-              h3.spanish Bachillerato Científico: Especialidad física-química        
+              h3.french Baccalaur&eacute;at Scientifique
+              .infojob.french Sp&eacute;cialit&eacute; physique-chimie
+              h3.english Scientific Baccalaureate Diploma
+              .infojob.english Specialty physics-chemistry
+              h3.spanish Bachillerato Científico        
+              .infojob.spanish Especialidad física-química
           .complemen#complementaire
             h2.french El&eacute;ments Compl&eacute;mentaires
             h2.english Additional Info
