--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -555,14 +555,14 @@ a.nav {
   text-decoration: none;
 }
 
+#atari {
+  display: block;
+  overflow: hidden;
+}
+
 #snowB {
   display: block;
-  background-image: url(/static/img/360backnoreverse.gif);
-  background-repeat: no-repeat;
-  background-size: 38%;
-  background-position: 45% 14%;
-  height: 50%;
-  overflow: hidden;
+  overflow: visible;
 }
 
 #footer {
