--- a/public/index.pug
+++ b/public/index.pug
@@ -9,9 +9,8 @@ append content
               #s0leil
             include jeuCV.pug
             .paraFoot My name is Mikael, I'm an IBM RPG &amp; Javascript Developer.
-              video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.jpg')
-                source(src='/static/video/theOneFinal2.webm'  type='video/webm')
-                source(src='/static/video/theOneFinal2.mp4' type='video/mp4')
+              video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
+                source(src='/static/video/theOneFinal.webm'  type='video/webm')
             button#BtnJs0nPl4Y PLAY
             .paraFoot This website hosts my skills, projects and experiences.
           //include joust.pug
