brickBreaker codeReview + snowBack.play|pause

--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -34,9 +34,9 @@ html(lang="en")
     block scripts
       script(src='/static/js/jquery-3.3.1.min.js')
       script(src='/static/js/jquery-ui.min.js')
-      script(src='/static/js/socket.io.js')
+      script(src='/static/js/socket.io.js' async)
       //script(src='/static/js/layoutNav.js')
-      script(rel='preconnect' src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1')
+      script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1' async)
       // Global site tag (gtag.js) - Google Analytics
       script.
         window.dataLayer = window.dataLayer || []
