--- a/public/index.pug
+++ b/public/index.pug
@@ -16,8 +16,8 @@ append content
           //include joust.pug
           //include adm1n.pug
 append scripts
-  script(src='/static/js/soleil.js' defer)
-  script(src='/static/js/BrickBreaker.js' defer)
+  script(src='/static/js/soleil.js' async)
+  script(src='/static/js/BrickBreaker.js' async)
   script.
     $('#intro').removeClass('css3button')
     $('#intro').addClass('css3buttonRed')
