--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -5,199 +5,198 @@ append content
 	.content
 		.table-cell
 			#m0ncentrage
+				p.flags
+					img#english(src='/static/img/uk.svg' alt='English' height='30')
+					img#french(src='/static/img/france.svg' alt='Français' height='30')
 				#INDEX
 					h1
-						span ADHD and High IQ: What&apos;s the Connection ?
+						span.english ADHD and High IQ: What&apos;s the Connection ?
+						span.french TDAH and QI élevé: Quel lien ?
 					h3
-						span
-							| written by: Lynn-nore Chittom &bull; edited by: Daniel P. McGoldrick &bull;
-							| updated: 5/25/2011
+						span.english written by: Lynn-nore Chittom &bull; edited by: Daniel P. McGoldrick &bull; updated: 5/25/2011
+						span.french écrit par: Lynn-nore Chittom &bull; édité par: Daniel P. McGoldrick &bull; mis à jour: 5/25/2011
+							|  &bull; traduit par: Mikaël Garcia
 					p
-						span Parents sometimes wonder if their children can have 
-						span
-							| both ADHD and High
-							| IQ levels. The answer is
-						span &nbsp;they can, and 
-						span they often do.
+						span.english
+							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
+							| The answer is &nbsp;they can, and they often do. 
+						span.french
+							| Des parents se demandent parfois si leur enfant peut à la fois être Haut Potentiel (HP) et hyperactif (TDAH)
+							| The answer is &nbsp;they can, and they often do. 
 					p
-						span
+						span.english
+							| Read on for answers to common questions about the relationship between ADHD and intelligence.
+						span.french
+							| Poursuivez la lecture pour trouver des réponses aux questions essentielles à propos de la liaision entre
+							| le TDAH et l'intelligence.
 					p
-						span Read on for answers
-						span
-							| to common questions about the
-							| relationship between ADHD and intelligence.
-					p
-						span
+						span.english 
 							| Masked, But Still There Some children with ADHD have also been gifted with a high IQ.
 							| Unfortunately, this does not actually negate the symptoms of the ADHD, though it may mask them for a while
 							| and make the diagnosis more difficult.
+						span.french 
+							| Invisible mais bien présent il existe des enfants avec un TDAH qui sont doté d'un QI élevé.
+							| Malheureusement, cette intelligence ne compense pas les symptomes d'un TDAH, biuen qu'il les rende 
+							| indetectable un certain temps ce qui rend leur diagnostique plus difficile. 
 					p
-						span
-					p
-						span
+						span.english
 							| Typically gifted children demonstrate a complicated combination of symptoms which
 							| represent both their giftedness and their ADHD. This may include perceptions or reasoning skills beyond
 							| their age, along with a propensity toward hyperactivity. Or it may be demonstrated in early reading and
 							| tremendous ease with learning, combined with extremely poor social skills.
+						span.french
+							| Typiquement, les enfants à haut potentitiel souffrent d'une combinaison complexe de symptomes dont la
+							| source est à la fois leur heut potentiel ainsi que la présence d'un TDAH.
+							| Cela peut inclure des capacités de perception ou de raisonnement au delà de leur âge, avec une
+							| tendance naturelle vers l'hyperactivité. Ou cela peut se remarquer par l'apprentissage précoce de la 
+							| lecture et une suprenante facilité d'appendre, combiné à d'extrèmement pauvre capacité sociales.
 					p
-						span
+						span.english
 							| Regardless of their intelligence, for children to be diagnosed with ADHD they must
 							| present symptoms from the following list for at least six months and symptoms must appear prior to age
 							| seven:
+						span.french
+							| Indépendamment de leur intelligence, pour le diagniostique d'un TDAH chez l'enfant, ils doivent présenté
+							| des symptomes de la liste suivante pendant plus de six mois et être apparu avant l'âge de 7ans.
 					ul
 						li
-							span Inability to sustain focus
+							span.english Inability to sustain focus
+							span.french Incapacité à maintenir l'attention
 						li
-							span Distractability
+							span.english Distractability
+							span.french Distractibilité
 						li
-							span Difficulty completing assignments
+							span.english Difficulty completing assignments
+							span.french Difficulté à terminer certaines consignes
 						li
-							span Forgetfulness
+							span.english Forgetfulness
+							span.french Distrait
 						li
-							span Frequent shifts in conversation
+							span.english Frequent shifts in conversation
+							span.french Changement de conversation fréquent
 						li
-							span
-								| Hyperfocusing on activities of interest to the point of ignoring other
-								| responsibilities
+							span.english
+								| Hyperfocusing on activities of interest to the point of ignoring other responsibilities
+							span.french
+								| Hyper-Concentration sur des activités qui l'interesse au point d'ignorer d'autres responsabilités
 						li
-							span Lack of organizational skills
+							span.english Lack of organizational skills
+							span.english Défault de capacité organisationnelle
 						li
-							span Fidgeting or squirming
+							span.english Fidgeting or squirming
+							span.french Agitation ou se tortillement
 						li
-							span Frequently hopping up out of their chairs
+							span.english Frequently hopping up out of their chairs
+							span.french Bondissement fréquent hors de leur chaise
 						li
-							span Running or climbing at inappropriate times and in inappropriate places
+							span.english Running or climbing at inappropriate times and in inappropriate places
+							span.french Courrant ou escaladant à des endroits et des moments innapropriés
 						li
-							span Inability to sit still or play quietly
+							span.english Inability to sit still or play quietly
+							span.french Incapacité à rester assis immobile ou à jouer calmement
 						li
-							span Excessive talking
+							span.english Excessive talking
+							span.french Bavardage excessif
 						li
-							span Impulsivity
-					p
-						span
+							span.english Impulsivity
+							span.french Impulsivité
 					h2
-						span How the ADHD Hides
+						span.english How the ADHD Hides
+						span.french Comment le TDAH se camoufle-t-il ?
 					p
-						span
+						span.english
 							| Children with high IQ levels are often able to circumvent detection of their ADHD if
 							| it is not caught early.
+						span.french
+							| Les enfants avec un QI élevé sont souvent capables de duper la detection de leur TDAH
+							| si ce n'est pas diagnostiqué précocement.
 					p
-						span
-					p
-						span
+						span.english
 							| By school time they are very capable of figuring out assignments even if they did not
 							| hear the directions.
+						span.french
+							| En milieu scolaire ils sont souvent capables de suivre les consignes même si ils 
+							| n'entendent pas les instructions.
 					p
-						span
-					p
-						span
+						span.english
 							| Similarly they may be able to learn independently and catch up despite
 							| distractability, excessive talking or fidgeting in the classroom.
+						span.french
+							| Ils sont également capables d'apprendre seul et d'acquérir les notions malgré 
+							| la distraction, les bavardages ou l'agitation en classe.
 					p
-						span
-					p
-						span
+						span.english
 							| Unfortunately, the ADHD eventually catches up with them as classwork becomes more
 							| challenging and teachers depend more on students being organized, self-motivated and attentive.
+						span.french
+							| Malheureusement, le TDAH les rattrape parfois quand les devoirs deviennent plus compliqués
+							| et que les professeurs demande davantagément aux étudiants d'être organisé et concentré.
 					p
-						span
-					p
-						span
+						span.english
 							| At this point the ADHD may appear to come out of nowhere for children who have masked
 							| it under their high intelligence.
+						span.french
+							| Au point que le TDAH risque d'apparaitre comme sorti de nul part pour les enfants qui l'ont
+							| masqué sous lors grande intelligence.
 					p
-						span
-					p
-						span
+						span.english
 							| Symptoms that May Appear Later in Life Individuals with ADHD and high intelligence
 							| sometimes manage to maneuver their way through school riding on their intellect alone. They work their
 							| teachers and the system and charm their way to success by applying themselves as needed, despite their
 							| limitations.
+						span.french
+							| Les symptomes risquent d'apparaitre plus tard dans la vies des individus présentant à la fois un
+							| TDAH et une haute intelligence qui parfois gère pour manoeuvrer leur chemin à travers l'école en
+							| surfant seulement sur leur capacité à comprendre. Ils manipulent leurs professeurs, le système 
+							| AND CHARM THEIR WAY pour réussir en s'impliquant suffisament malgré leurs limites.
 					p
-						span
-					p
-						span
+						span.english
 							| During school years, the ADHD may go undetected and symptoms may be attributed to
 							| boredom or defiance. Outside of school it becomes obvious that these individuals have difficulties with
 							| short term memory and basic functioning skills. They may find themselves multi-tasking to a fault, having
 							| difficulties sleeping due to hyperactivity, or struggling to remain organized or on-task. These symptoms can
 							| present themselves at any time, but that does not mean they are new symptoms.
+						span.french
+							| Pendant la scolarité, les TDAH riquent de rester indecté et les symptomes d'être attribuer à de l'ennui ou de 
+							| la provocation. Sorti du système soclaire il devient alors évident que ces individus ont des diffcultés avec 
+							| leur mémoire à court terme et les aptitudes fonctionnelles élémentaires. Il risque de se retrouver à jongler 
+							| avec les tâches à l'extrême, d'avoir des problèmes de sommeil à cause de l'hyperactivité, ou de lutter pour 
+							| rester organiser ou bien concentré sur une tâche. Ces symptômes peubvent apparaitre à n'importe quel moment,
+							| mais cela ne veut pas dire qu'il s'agit de nouveaux symptomes.
 					p
-						span
-					p
-						span
+						span.english
 							| ADHD is a genetic neuropsychological disorder, and is not an adult-onset
 							| disorder.
+						span.french
+							| Un TDAH est un trouble neuro-psychologique génétique, et non un nouveau trouble chez l'adulte.
 					p
-						span
-					p
-						span
+						span.english
 							| When symptoms seem to appear later in life, individuals may initially deny their
 							| ADHD, but often eventually decide to pursue treatment on their own.
+						span.french
+							| Lorsque les symptômes semblent apparaitre plus tard dans leur vie, ils risque dans un premier
+							| de temps de dénier leur TDAH, mais souvent éventuellement décide de poursuivre leur traitement d'eux-même.
 					p
-						span
-					p
-						span
+						span.english
 							| Medication can be effective, even if they did not treat their ADHD in this way during
 							| childhood or adolescence.
+						span.french
+							| Des médicaments peuvent fontionner, même s'ils n'en n'ont pas pris durant leur enfance ou adolescence.
 					p
-						span
-					p
-						span
+						span.english
 							| The most popular treatment options for adults with ADHD and High IQ are stimulant
 							| drugs which reduce their symptoms and enable their high intelligence to shine.
+						span.french
+							| Le choix de traitement le plus courrant pour les adultes avec un TDAH sont des médicaments stimulants 
+							| qui réduise leurs symptômes et permet alors à leur haute intelligence de briller.
 					p
 						span
-					p
-						span
-					p
-						span
-					p
-						span
-							| Reference
+							| References:
 							| http://psychcentral.com/news/2009/05/25/high-iq-offers-no-protection-from-adhd-effects/6074.html
 					p
-						span
-					p
 						span http://www.webmd.com/add-adhd/guide/adhd-symptoms 
-						span
-							| ing
-							| skills. They may find themselves multi-tasking to a fault, having difficulties sleeping due to
-							| hyperactivity, or struggling to remain organized or on-task. These symptoms can present themselves at any
-							| time, but that does not mean they are new symptoms.
-					p
-						span
-					p
-						span
-							| ADHD is a genetic neuropsychological disorder, and is not an adult-onset
-							| disorder.
-					p
-						span
-					p
-						span
-							| When symptoms seem to appear later in life, individuals may initially deny their
-							| ADHD, but often eventually decide to pursue treatment on their own.
-					p
-						span
-					p
-						span
-							| Medication can be effective, even if they did not treat their ADHD in this way during
-							| childhood or adolescence.
-					p
-						span
-					p
-						span
-							| The most popular treatment options for adults with ADHD and High IQ are stimulant
-							| drugs which reduce their symptoms and enable their high intelligence to shine.
-					p
-						span
-					p
-						span
-					p
-						span
-					p
-						span Reference http://psychcentral.com/news/2009/05/25/high-iq-and-adhd
 append scripts
+	script(src='/static/js/trad.js' defer)
 	script.
 		$('#intro').removeClass('css3buttonRed')
 		$('#intro').addClass('css3button')
