--- a/public/cv.pug
+++ b/public/cv.pug
@@ -7,7 +7,8 @@ append content
       #m0ncentrage
         #INDEX
           .moi
-            p.moiPara Mika&euml;l GARCIA
+            //display-none
+            p.moiPara Mika&euml;l GARCIA 
               img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='78' onclick='openlinkedin();')
             a.pdf.french(href='/static/img/cvMikaelFr.pdf')
               img.pdf.french(src='/static/img/downPdf.svg' alt='download pdf' height='64')
@@ -17,8 +18,6 @@ append content
               img.pdf.spanish(src='/static/img/downPdf.svg' alt='download pdf' height='64')
             p.moiPara 35 y/o
             p.moiPara +33 695 490 777
-            p.moiPara 22 rue du Bourg Tibourg
-            p.moiPara 75004 Paris, FR
             p.moiPara
               a.mail(href='mailto:garcia.mikael@gmail.com') garcia.mikael@gmail.com
           p.flags
