update trad + ******back to osx******

--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -21,8 +21,8 @@ append content
 							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
 							| The answer is &nbsp;they can, and they often do. 
 						span.french
-							| Des parents se demandent parfois si leur enfant peut à la fois être Haut Potentiel (HP) et hyperactif (TDAH)
-							| The answer is &nbsp;they can, and they often do. 
+							| Des parents se demandent parfois si leurs enfants peuvent à la fois être Haut Potentiel (HP) et hyperactif (TDAH).
+							| La réponse est OUI et c'est souvent le cas. 
 					p
 						span.english
 							| Read on for answers to common questions about the relationship between ADHD and intelligence.
@@ -56,7 +56,7 @@ append content
 							| present symptoms from the following list for at least six months and symptoms must appear prior to age
 							| seven:
 						span.french
-							| Indépendamment de leur intelligence, pour le diagniostique d'un TDAH chez l'enfant, ils doivent présenté
+							| Indépendamment de leur intelligence, pour le diagniostique d'un TDAH chez les enfants, ils doivent présenté
 							| des symptomes de la liste suivante pendant plus de six mois et être apparu avant l'âge de 7ans.
 					ul
 						li
@@ -148,7 +148,7 @@ append content
 							| Les symptomes risquent d'apparaitre plus tard dans la vies des individus présentant à la fois un
 							| TDAH et une haute intelligence qui parfois gère pour manoeuvrer leur chemin à travers l'école en
 							| surfant seulement sur leur capacité à comprendre. Ils manipulent leurs professeurs, le système 
-							| AND CHARM THEIR WAY pour réussir en s'impliquant suffisament malgré leurs limites.
+							| et réussissent sans embûches en s'impliquant suffisament malgré leurs limites.
 					p
 						span.english
 							| During school years, the ADHD may go undetected and symptoms may be attributed to
