--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -22,7 +22,7 @@ append content
 							| The answer is &nbsp;they can, and they often do. 
 						span.french
 							| Des parents se demandent parfois si leurs enfants peuvent à la fois être Haut Potentiel (HP) et hyperactif (TDAH).
-							| La réponse est OUI et c'est souvent le cas. 
+							| La réponse est ouiii et c'est souvent le cas. 
 					p
 						span.english
 							| Read on for answers to common questions about the relationship between ADHD and intelligence.
