***Fin trad ***Script creation db

--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -36,8 +36,8 @@ append content
 							| and make the diagnosis more difficult.
 						span.french 
 							| Invisible mais bien présent il existe des enfants avec un TDAH qui sont doté d'un QI élevé.
-							| Malheureusement, cette intelligence ne compense pas les symptomes d'un TDAH, biuen qu'il les rende 
-							| indetectable un certain temps ce qui rend leur diagnostique plus difficile. 
+							| Malheureusement, cette intelligence ne compense pas les symptomes d'un TDAH, bien qu'elle les rende 
+							| indetectable un certain temps ce qui complique leur diagnostique. 
 					p
 						span.english
 							| Typically gifted children demonstrate a complicated combination of symptoms which
@@ -45,7 +45,7 @@ append content
 							| their age, along with a propensity toward hyperactivity. Or it may be demonstrated in early reading and
 							| tremendous ease with learning, combined with extremely poor social skills.
 						span.french
-							| Typiquement, les enfants à haut potentitiel souffrent d'une combinaison complexe de symptomes dont la
+							| Souvent, les enfants à haut potentitiel souffrent d'une combinaison complexe de symptomes dont la
 							| source est à la fois leur heut potentiel ainsi que la présence d'un TDAH.
 							| Cela peut inclure des capacités de perception ou de raisonnement au delà de leur âge, avec une
 							| tendance naturelle vers l'hyperactivité. Ou cela peut se remarquer par l'apprentissage précoce de la 
