--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -11,7 +11,7 @@ append content
 				#INDEX
 					h1
 						span.english ADHD and High IQ: What&apos;s the Connection ?
-						span.french TDAH and QI élevé: Quel lien ?
+						span.french TDAH and QI élevé: Quels liens ?
 					h3
 						span.english written by: Lynn-nore Chittom &bull; edited by: Daniel P. McGoldrick &bull; updated: 5/25/2011
 						span.french écrit par: Lynn-nore Chittom &bull; édité par: Daniel P. McGoldrick &bull; mis à jour: 5/25/2011
@@ -21,23 +21,23 @@ append content
 							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
 							| The answer is &nbsp;they can, and they often do. 
 						span.french
-							| Des parents se demandent parfois si leurs enfants peuvent à la fois être Haut Potentiel (HP) et hyperactif (TDAH).
-							| La réponse est ouiii et c'est souvent le cas. 
+							| Des parents se demandent parfois si leurs enfants peuvent être à la fois Haut Potentiel (HP) et hyperactif (TDAH).
+							| La réponse est oui et c'est souvent le cas. 
 					p
 						span.english
 							| Read on for answers to common questions about the relationship between ADHD and intelligence.
 						span.french
-							| Poursuivez la lecture pour trouver des réponses aux questions essentielles à propos de la liaision entre
-							| le TDAH et l'intelligence.
+							| Poursuivez la lecture pour des réponses aux principales questions sur les liens entre
+							| TDAH et intelligence.
 					p
 						span.english 
 							| Masked, But Still There Some children with ADHD have also been gifted with a high IQ.
 							| Unfortunately, this does not actually negate the symptoms of the ADHD, though it may mask them for a while
 							| and make the diagnosis more difficult.
 						span.french 
-							| Invisible mais bien présent il existe des enfants avec un TDAH qui sont doté d'un QI élevé.
-							| Malheureusement, cette intelligence ne compense pas les symptomes d'un TDAH, bien qu'elle les rende 
-							| indetectable un certain temps ce qui complique leur diagnostique. 
+							| Invisible mais bien présent, il existe des enfants qui touché par un TDAH et un QI élevé.
+							| Malheureusement, cette intelligence ne compense pas les symptomes du TDAH bien qu'elle les rende 
+							| indetectable un certain temps, ce qui complique leur détection. 
 					p
 						span.english
 							| Typically gifted children demonstrate a complicated combination of symptoms which
@@ -45,19 +45,19 @@ append content
 							| their age, along with a propensity toward hyperactivity. Or it may be demonstrated in early reading and
 							| tremendous ease with learning, combined with extremely poor social skills.
 						span.french
-							| Souvent, les enfants à haut potentitiel souffrent d'une combinaison complexe de symptomes dont la
-							| source est à la fois leur heut potentiel ainsi que la présence d'un TDAH.
-							| Cela peut inclure des capacités de perception ou de raisonnement au delà de leur âge, avec une
-							| tendance naturelle vers l'hyperactivité. Ou cela peut se remarquer par l'apprentissage précoce de la 
-							| lecture et une suprenante facilité d'appendre, combiné à d'extrèmement pauvre capacité sociales.
+							| Souvent, les enfants à haut potentitiel souffrent d'une combinaison complexe de symptômes dont la
+							| source est à la fois leur haut potentiel ainsi que la présence d'un TDAH.
+							| Cela peut inclure des capacités de perception ou de raisonnement au-delà de leur âge, avec une
+							| tendance naturelle vers l'hyperactivité. Ou alors, cela peut se remarquer par l'apprentissage précoce de la 
+							| lecture et une suprenante facilité d'appendre, combinées à d'extrèmement pauvres capacités sociales.
 					p
 						span.english
 							| Regardless of their intelligence, for children to be diagnosed with ADHD they must
 							| present symptoms from the following list for at least six months and symptoms must appear prior to age
 							| seven:
 						span.french
-							| Indépendamment de leur intelligence, pour le diagniostique d'un TDAH chez les enfants, ils doivent présenté
-							| des symptomes de la liste suivante pendant plus de six mois et être apparu avant l'âge de 7ans.
+							| Indépendamment de leur intelligence, pour être detecté comme présentant un TDAH, les enfants doivent présenter
+							| des symptômes de la liste suivante pendant plus de six mois avant l'âge de 7ans.
 					ul
 						li
 							span.english Inability to sustain focus
@@ -70,27 +70,27 @@ append content
 							span.french Difficulté à terminer certaines consignes
 						li
 							span.english Forgetfulness
-							span.french Distrait
+							span.french Distraction
 						li
 							span.english Frequent shifts in conversation
-							span.french Changement de conversation fréquent
+							span.french Changement de conversations fréquent
 						li
 							span.english
 								| Hyperfocusing on activities of interest to the point of ignoring other responsibilities
 							span.french
-								| Hyper-Concentration sur des activités qui l'interesse au point d'ignorer d'autres responsabilités
+								| Hyper-Concentration sur des activités qui l'intéresse au point d'ignorer d'autres responsabilités
 						li
 							span.english Lack of organizational skills
 							span.english Défault de capacité organisationnelle
 						li
 							span.english Fidgeting or squirming
-							span.french Agitation ou se tortillement
+							span.french Agitation ou tortillements
 						li
 							span.english Frequently hopping up out of their chairs
-							span.french Bondissement fréquent hors de leur chaise
+							span.french Bondissements fréquents hors de leur chaise
 						li
 							span.english Running or climbing at inappropriate times and in inappropriate places
-							span.french Courrant ou escaladant à des endroits et des moments innapropriés
+							span.french Courrent ou escaladent à des endroits et des moments innapropriés
 						li
 							span.english Inability to sit still or play quietly
 							span.french Incapacité à rester assis immobile ou à jouer calmement
@@ -108,14 +108,14 @@ append content
 							| Children with high IQ levels are often able to circumvent detection of their ADHD if
 							| it is not caught early.
 						span.french
-							| Les enfants avec un QI élevé sont souvent capables de duper la detection de leur TDAH
-							| si ce n'est pas diagnostiqué précocement.
+							| Les enfants au QI élevé sont souvent capables de duper la detection de leur TDAH
+							| s'il n'est pas detecté précocément.
 					p
 						span.english
 							| By school time they are very capable of figuring out assignments even if they did not
 							| hear the directions.
 						span.french
-							| En milieu scolaire ils sont souvent capables de suivre les consignes même si ils 
+							| En milieu scolaire ils sont souvent capables de suivre les consignes même s'ils 
 							| n'entendent pas les instructions.
 					p
 						span.english
@@ -130,14 +130,14 @@ append content
 							| challenging and teachers depend more on students being organized, self-motivated and attentive.
 						span.french
 							| Malheureusement, le TDAH les rattrape parfois quand les devoirs deviennent plus compliqués
-							| et que les professeurs demande davantagément aux étudiants d'être organisé et concentré.
+							| et que les professeurs demandent davantage aux étudiants en termes d'organisation et de concentration.
 					p
 						span.english
 							| At this point the ADHD may appear to come out of nowhere for children who have masked
 							| it under their high intelligence.
 						span.french
-							| Au point que le TDAH risque d'apparaitre comme sorti de nul part pour les enfants qui l'ont
-							| masqué sous lors grande intelligence.
+							| Au point que le TDAH risque d'apparaître comme sorti de nulle part pour les enfants qui l'ont
+							| masqué sous leur grande intelligence.
 					p
 						span.english
 							| Symptoms that May Appear Later in Life Individuals with ADHD and high intelligence
@@ -145,10 +145,10 @@ append content
 							| teachers and the system and charm their way to success by applying themselves as needed, despite their
 							| limitations.
 						span.french
-							| Les symptomes risquent d'apparaitre plus tard dans la vies des individus présentant à la fois un
-							| TDAH et une haute intelligence qui parfois gère pour manoeuvrer leur chemin à travers l'école en
+							| Les signes risquent d'apparaître plus tard dans la vie des individus présentant à la fois un
+							| TDAH et une forte intelligence qui parfois gèrent pour manoeuvrer leur chemin à travers l'école en
 							| surfant seulement sur leur capacité à comprendre. Ils manipulent leurs professeurs, le système 
-							| et réussissent sans embûches en s'impliquant suffisament malgré leurs limites.
+							| et réussissent sans embûches en s'impliquant suffisament, malgré leurs limites.
 					p
 						span.english
 							| During school years, the ADHD may go undetected and symptoms may be attributed to
@@ -157,38 +157,38 @@ append content
 							| difficulties sleeping due to hyperactivity, or struggling to remain organized or on-task. These symptoms can
 							| present themselves at any time, but that does not mean they are new symptoms.
 						span.french
-							| Pendant la scolarité, les TDAH riquent de rester indecté et les symptomes d'être attribuer à de l'ennui ou de 
-							| la provocation. Sorti du système soclaire il devient alors évident que ces individus ont des diffcultés avec 
-							| leur mémoire à court terme et les aptitudes fonctionnelles élémentaires. Il risque de se retrouver à jongler 
-							| avec les tâches à l'extrême, d'avoir des problèmes de sommeil à cause de l'hyperactivité, ou de lutter pour 
-							| rester organiser ou bien concentré sur une tâche. Ces symptômes peubvent apparaitre à n'importe quel moment,
-							| mais cela ne veut pas dire qu'il s'agit de nouveaux symptomes.
+							| Pendant la scolarité, les TDAH riquent de rester invisibles et les troubles comportementaux attribués à de l'ennui ou de 
+							| la provocation. Sorti du système scolaire, il devient alors évident que ces individus ont des difficultés avec 
+							| la mémoire à court terme et certaines aptitudes fonctionnelles basiques. Ils risquent alors de jongler 
+							| avec les tâches à l'extrême, d'avoir des problèmes de sommeil à cause de l'hyperactivité ou bien de lutter pour 
+							| rester organisé/concentré sur une tâche. Ces symptômes peuvent survenir à n'importe quel moment,
+							| mais cela ne veut pas dire qu'il s'agisse de nouveaux symptômes.
 					p
 						span.english
 							| ADHD is a genetic neuropsychological disorder, and is not an adult-onset
 							| disorder.
 						span.french
-							| Un TDAH est un trouble neuro-psychologique génétique, et non un nouveau trouble chez l'adulte.
+							| Un TDAH est un trouble neuro-psychologique génétique, et non un trouble qui survient chez l'adulte.
 					p
 						span.english
 							| When symptoms seem to appear later in life, individuals may initially deny their
 							| ADHD, but often eventually decide to pursue treatment on their own.
 						span.french
-							| Lorsque les symptômes semblent apparaitre plus tard dans leur vie, ils risque dans un premier
-							| de temps de dénier leur TDAH, mais souvent éventuellement décide de poursuivre leur traitement d'eux-même.
+							| Lorsque les symptômes semblent intervenir plus tard dans leur vie, ils risquent dans un premier
+							| temps de nier leur TDAH, mais souvent décident éventuellement de poursuivre un traitement d'eux-même.
 					p
 						span.english
 							| Medication can be effective, even if they did not treat their ADHD in this way during
 							| childhood or adolescence.
 						span.french
-							| Des médicaments peuvent fontionner, même s'ils n'en n'ont pas pris durant leur enfance ou adolescence.
+							| Des médicaments peuvent fontionner, même s'ils n'en n'ont pas pris durant l'enfance ou l'adolescence.
 					p
 						span.english
 							| The most popular treatment options for adults with ADHD and High IQ are stimulant
 							| drugs which reduce their symptoms and enable their high intelligence to shine.
 						span.french
-							| Le choix de traitement le plus courrant pour les adultes avec un TDAH sont des médicaments stimulants 
-							| qui réduise leurs symptômes et permet alors à leur haute intelligence de briller.
+							| Un des choix de traitement les plus courrant pour les adultes avec un TDAH sont des médicaments stimulants 
+							| qui réduisent leurs symptômes et permetent alors à leur haute intelligence de briller.
 					p
 						span
 							| References:
